# smart_fan_controller_zwift_v8

./: .gitattributes  .gitignore  ARCHITECTURE.md  ARCHITECTURE_HU.md  CHANGELOG.md  CONFIGURATION.md  DEVELOPMENT.md  LICENSE  README.md  build_exe.bat  esp32_fan_controller.ino  manual.odt  mukodes.odt  pyproject.toml  requirements.txt  run.bat  settings.example.json  settings.example.jsonc  setup_windows.bat  smart_fan_controller.spec  swift_fan_controller.py  swift_fan_controller_new_v8_PySide6.py  zwift_api_polling.py  zwift_api_settings.example.json  zwift_api_settings.example.jsonc  zwift_fan_controller.py
data/: config.json
docs/: conf.py  index.rst
docs/api/: config.rst  controller_app.rst  core.rst  handlers.rst  processors.rst  ui.rst  zwift_api.rst
esp32_firmware/: BEVEZETO.md  FanController_OTA_debug.ino  OTA_TROUBLESHOOTING.md  README.md  TOOLS_README.md  build.sh  diag_client.py  fan_stress.py  ota_diagnostic.py  partitions_custom.csv  serial_monitor.py  verhistory.md
esp32_firmware/sender/: README.md  discover.py  ota.py  run.bat
fonts/: README.txt
hud_test/: README.md  hud_test.bat  run_hud_test.py
smart_fan_controller/: __init__.py  app.py  controller.py
smart_fan_controller/config/: __init__.py  loader.py  schemas.py  settings.default.json
smart_fan_controller/core/: __init__.py  averaging.py  cooldown.py  helpers.py  logging_setup.py  printers.py  state.py  zones.py
smart_fan_controller/handlers/: __init__.py  _ant.py  _ble.py  zwift_udp.py
smart_fan_controller/processors/: __init__.py  processors.py
smart_fan_controller/sounds/: README.txt
smart_fan_controller/ui/: __init__.py  hud.py  sound.py  theme.py  widgets.py  window.py
smart_fan_controller/zwift_api/: __init__.py  __main__.py  api.py  decoder.py  logsetup.py  runtime.py
tests/: conftest.py  test_core.py  test_hud_ui.py  test_pipeline.py
tools/: generate_lcars_sounds.py
