[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-fan-controller-zwift"
# A verzió egyetlen forrása: smart_fan_controller/__init__.py __version__
dynamic = ["version"]
description = "Zwift-integrált okos ventilátor vezérlő – BLE, ANT+, Zwift UDP adatforrásokkal"
# 3.11+: enum.StrEnum, beépített TimeoutError-alias, modern asyncio
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "bleak>=0.21.0",
]

[project.optional-dependencies]
ant = ["openant>=1.0.0"]
zwift = ["requests>=2.28.0"]
ui = ["PySide6>=6.5.0"]
autolaunch = ["pywinauto>=0.6.8"]
all = [
    "bleak>=0.21.0",
    "openant>=1.0.0",
    "requests>=2.28.0",
    "PySide6>=6.5.0",
    "pywinauto>=0.6.8",
]

[project.scripts]
smart-fan-controller = "zwift_fan_controller:main"

[tool.setuptools.dynamic]
version = {attr = "smart_fan_controller.__version__"}

[tool.setuptools]
# Explicit felsorolás: a flat layout (csomag + két top-level belépőmodul)
# auto-discovery-vel nem egyértelmű.
py-modules = ["zwift_fan_controller", "zwift_api_polling"]

[tool.setuptools.packages.find]
include = ["smart_fan_controller*"]

[tool.setuptools.package-data]
# A config package versiókövetett default sablonja a pip-install csomagba is kerüljön.
"smart_fan_controller.config" = ["settings.default.json"]
# Az LCARS Antonio fontok a package-be települjenek (a hud.py innen tölti be).
"smart_fan_controller" = ["fonts/*.ttf", "fonts/README.txt"]
